--- a/app/views/partials/_topnav.html.erb
+++ b/app/views/partials/_topnav.html.erb
@@ -3,22 +3,14 @@
         <a href="/projects" class="brand-logo"><img class="materialboxed" src="images/logo-white.png">BRAINSTOR.ME</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/projects">Home</a></li>
-            <li><a class="waves-effect waves-light btn" <%= link_to 'New Project', new_project_path %></a></li>
-            <li><a href="#">ShoutOut</a></li>
             <% if user_signed_in? %>
-              <li>
-                <a class="waves-effect waves-light"<%= link_to current_user.name, edit_user_registration_path %></a>
-              </li>
-              <li>
-                <a class="waves-effect waves-light"<%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
-              </li>
+                <li><a class="waves-effect waves-light btn" <%= link_to 'New Project', new_project_path %></a></li>
+                <li><a href="#">ShoutOut</a></li>
+                <li><a class="waves-effect waves-light"<%= link_to current_user.name, edit_user_registration_path %></a></li>
+                <li><a class="waves-effect waves-light"<%= link_to "Logout", destroy_user_session_path, method: :delete %></a></li>
             <% else %>
-            <li>
-              <a class="waves-effect waves-light"<%= link_to 'Sign In', new_user_session_path %></a>
-            </li>
-			<li>
-              <a class="waves-effect waves-light"<%= link_to 'Sign Up', new_user_registration_path %></a>
-            </li>
+                <li><a class="waves-effect waves-light"<%= link_to 'Sign In', new_user_session_path %></a></li>
+			    <li><a class="waves-effect waves-light"<%= link_to 'Sign Up', new_user_registration_path %></a></li>
             <% end %>
         </ul>
     </div>
