--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,41 +1,55 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col s12 m4 l3">
+  <% if user_signed_in? %>
+    <div class="card-panel">
+      <div class="chip">
+        <img src="">
+      </div>
+      <div>
+        <p><%= current_user.name %></p>
+        <p><%= current_user.email %></p>
+      </div>
+      <div>
+        <p>Projects</p>
+        <p><%= current_user.projects.count %></p>
+      </div>
+      <div>
+        <p>ShoutOuts</p>
+        <p><%= %></p>
+      </div>
+      
+    </div>
+  <% end %>
+  </div>
 
-<h1>Projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Thumbnail</th>
-      <th>Location</th>
-      <th>Deadline</th>
-      <th>Highlights</th>
-      <th>Results</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.title %></td>
-        
-        <td><%= project.description %></td>
-        <td><%= project.thumbnail %></td>
-        <td><%= project.location %></td>
-        <td><%= project.deadline %></td>
-        <td><%= project.highlights %></td>
-        <td><%= project.results %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-
-      </tr>
+  <div class="col s12 m4 l6">
+    <% @projects.each do |project| %> 
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="<%= project.thumbnail %>">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4 title"><%= project.title %><i class="material-icons right">more_vert</i></span>
+        <div class="card-action">
+          <% if user_signed_in? && current_user.id == project.user_id%>
+          <a><%= link_to 'Show', project %></a>
+          <a><%= link_to 'Edit', edit_project_path(project) %></a>
+          <a><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></a>
+          <% end %>
+        </div>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><%= project.title %><i class="material-icons right">close</i></span>
+          <p><%= project.description %></p>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<br>
 
-<%= link_to 'New Project', new_project_path %>
+  <div class="col s12 m4 l3">
+    <div class="card-panel">
+    </div>
+  </div>
+</div>
