Fixed images and Adjust styling index and topnav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,17 @@
   margin: 0;
   font-family: 'Roboto', sans-serif;
  }
+
+ img.profile {
+    width: 70px;
+    height: 70px;
+ }
+
+ img.logo {
+    width: 60px;
+    height: 60px;
+ }
+
+ img.project-thumbnail {
+    height: 350px;  
+ }
