--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       </section>
     </header>
 
-    <div class="container main-page">
+    <div class="main-page">
       <% if flash[:notice] %>
   		  <div class="">
   			  <p class="notice"><%= notice %></p>
