--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,8 +3,8 @@
   <div class="col s12 m4 l3">
   <% if user_signed_in? %>
     <div class="card-panel">
-      <div class="chip">
-        <img src="">
+      <div class="chips">
+        <img class="circle profile" src="/assets/profile.jpeg">
       </div>
       <div>
         <p><%= current_user.name %></p>
@@ -23,11 +23,11 @@
   <% end %>
   </div>
 
-  <div class="col s12 m4 l6">
+  <div class="col s12 m4 l5">
     <% @projects.each do |project| %> 
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="<%= project.thumbnail %>">
+          <img class="activator project-thumbnail" src="/assets/barista-thumb.jpeg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4 title"><%= project.title %><i class="material-icons right">more_vert</i></span>
