--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
         <%= render partial: "partials/topnav" %>
       </section>
     </header>
+    
+    <footer>
+      <section>
+        <%= render partial: "partials/footer" %>
+      </section>
+    </footer>
 
     <div class="main-page">
       <% if flash[:notice] %>
