--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,43 @@
 // Place all the styles related to the Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+img.project-thumbnail {
+    height: 350px;  
+ }
+
+  .pin {
+    position: relative;
+  }
+
+  .card-profile {
+    width: 280px;
+  }
+
+  .card-trends {
+    width: 280px;
+  }
+
+  .bloc1, .bloc2 {
+    display:inline-block;
+    margin: 5px;
+ }
+
+  .bloc1 p, .bloc2 p {
+    text-align: center;
+ }
+
+ .bold {
+    font-weight: bolder;
+ }
+
+ .form {
+    margin: 0 auto;
+    width: 50%;
+}
+
+ .submit {
+    border-radius: 30px;
+ }
+
