--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Resend confirmation instructions</h2>
+<h2 class="center title">Resend confirmation instructions</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
+<div class="form">
+    <div class="row">
+      <div class="col s12">
+        
+        <div class="card-panel">
+          <div class="input-field col s12">
+            <%= f.label :email %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+          </div>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+          <div class="actions">
+            <%= f.submit "Resend confirmation instructions" %>
+          </div>
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
