--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,34 @@
-<h2>Change your password</h2>
+<h2 class="center title">Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+  <div class="form">
+    <div class="row">
+      <div class="col s12">
+        
+        <div class="card-panel">
+          <div class="input-field col s12">
+            <%= f.label :password, "New password" %><br />
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+            <% end %>
+            <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+          <div class="input-field col s12">
+            <%= f.label :password_confirmation, "Confirm new password" %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+          </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
+          <div class="actions">
+            <a class="waves-effect waves-light btn submit"><%= f.submit "Change my password" %></a>
+          </div>
+    
+          <%= render "devise/shared/links" %>
+        </div>  
+      </div>  
+    </div>  
+  </div>  
 <% end %>
-
-<%= render "devise/shared/links" %>
