--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,49 @@
-<h2>Sign up</h2>
+<h2 class="center title">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
+  <div class="form">
+    <div class="row">
+      <div class="col s12">
+        
+        <div class="card-panel">
+          <div class="input-field col s12">
+            <%= f.label :name, for: "name" %><br />
+            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "validate", id: "name" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-  </div>
+          <div class="input-field col s12">
+            <%= f.label :username, for: "username" %><br />
+            <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "validate", id: "username" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+          <div class="input-field col s12">
+            <%= f.label :email, for: "email" %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "validate", id: "email" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+          <div class="input-field col s12">
+            <%= f.label :password,for: "password" %>
+            <% if @minimum_password_length %>
+            <span><small>(<%= @minimum_password_length %> characters minimum)</small></span>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "off", class: "validate", id: "password" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+          <div class="input-field col s12">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+          </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+          <div class="actions">
+            <a class="waves-effect waves-light btn submit"><%= f.submit "Sign up" %></a>
+          </div>
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
