--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with(model: project, local: true) do |form| %>
   <% if project.errors.any? %>
     <div id="error_explanation">
@@ -11,42 +12,58 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+  <div class="form">
+  <div class="row">
+    <div class="col s12">
+        
+      <div class="card-panel center">
+        <div class="input-field col s12">
+          <%= form.label :title, for:"title" %>
+          <%= form.text_field :title, class: "validate", id: "title" %>
+        </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+        <div class="input-field col s12">
+          <%= form.label :description, for: "description" %>
+          <%= form.text_area :description, class: "validate materialize-textarea", id: "description" %>
+        </div>
 
-  <div class="field">
-    <%= form.label :thumbnail %>
-    <%= form.text_field :thumbnail %>
-  </div>
+        <div class="input-field col s12">
+          <%= form.label :thumbnail, for: "thumbnail" %>
+          <%= form.text_field :thumbnail, class: "validate", id: "thumbnail" %>
+        </div>
 
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location %>
-  </div>
+        <div class="input-field col s12">
+          <%= form.label :location, for: "location" %>
+          <%= form.text_field :location, class: "validate", id: "location" %>
+        </div>
 
-  <div class="field">
-    <%= form.label :deadline %>
-    <%= form.datetime_select :deadline %>
-  </div>
+        <div class="input-field col s12">
+          <%= form.label :deadline, for: "deadline" %>
+          <%= form.datetime_select :deadline, class: "datepicker", id: "deadline" %>
+        </div>
 
-  <div class="field">
-    <%= form.label :highlights %>
-    <%= form.text_area :highlights %>
-  </div>
+        <div class="input-field col s12">
+          <%= form.label :highlights, for: "highlights" %>
+          <%= form.text_area :highlights, class: "validate materialize-textarea", id: "highlights" %>
+        </div>
 
-  <div class="field">
-    <%= form.label :results %>
-    <%= form.text_area :results %>
-  </div>
+        <div class="input-field col s12">
+          <%= form.label :results, for: "results" %>
+          <%= form.text_area :results, class: "validate materialize-textarea", id: "results" %>
+        </div>
 
-  <div class="actions">
-    <%= form.submit %>
+        <div class="actions">
+          <a class="waves-effect waves-light btn white-text left"> <%= form.submit%></a>
+        </div>
+        <div>
+          <%= link_to projects_path, class: "waves-effect waves-light btn" do %>
+            <span><i class="material-icons">navigate_before</i></span>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+  
 <% end %>
+
