--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,7 +14,7 @@
         </span>
         <div class="bloc1">
           <p class="bold">Projects</p>
-          <p><%= current_user.projects.count %></p>
+          <p><%#= current_user.projects.count %></p>
         </div>
         <div class="bloc2">
           <p class="bold">ShoutOuts</p>
