--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,24 +16,10 @@
 </p>
 
 <p>
-  <strong>Location:</strong>
-  <%= @project.location %>
+  <strong>Team:</strong>
+  <%=  %>
 </p>
 
-<p>
-  <strong>Deadline:</strong>
-  <%= @project.deadline %>
-</p>
-
-<p>
-  <strong>Highlights:</strong>
-  <%= @project.highlights %>
-</p>
-
-<p>
-  <strong>Results:</strong>
-  <%= @project.results %>
-</p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
