Add shoutouts feature

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
  @import url('https://fonts.googleapis.com/css?family=Abel|Do+Hyeon|Dosis|Lato|Merriweather+Sans|Poppins|Roboto');
 
  @import"projects";
+ @import"shoutouts";
 
  html {
   height: 100%;
