--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -77,7 +77,7 @@
   </div>
 
   <% if user_signed_in? %>
-    <!-- ShoutOut Section -->
+    <!-- Feedback Section -->
     <div class="col s12 m4 l3">
       <section class="">
         <div class="card-panel card-trends">
@@ -107,40 +107,7 @@
           </form>
         </div>
       </section>
-
-      <section class="">
-        <div class="card-panel card-trends">
-          <h6 class="center">ShoutOuts 
-          <i class="waves-effect waves-light material-icons right modal-trigger" href="#modal1">call_made</i></h6>
-          <div class="divider"></div>
-            <span class="bloc1">
-              <img class="circle avatar-projects" src="/assets/profile2.jpeg">
-            </span>
-            <span class="bloc2">
-            <p class="truncate shoutout"> a lot of text text text text</p>
-            </span>
-          <div class="center">
-          <a><i class="material-icons">keyboard_arrow_down</i></a>
-          </div>
-        </div>
-      </section>
-    </div>
-
-    <!-- Modal ShoutOut -->
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-      <h6 class="center">ShoutOuts</h6>
-      <div class="divider"></div>
-        <span class="bloc1">
-          <img class="circle avatar-projects" src="/assets/profile2.jpeg">
-        </span>
-        <span class="bloc2">
-          <p class="shoutout"> a lot of text text text text text here</p>
-        </span>
-      <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect btn-flat">close</a>
-      </div>
-    </div>
+    </div> 
   <% end %>
 </div>
 
