--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2 class="center title">Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class="center title">Edit Profile</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -9,8 +9,23 @@
         
         <div class="card-panel">
           <div class="input-field col s12">
+            <%= f.label :username %>
+            <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
+          </div>
+
+          <div class="input-field col s12">
+            <%= f.label :photo %>
+            <%= f.text_field :photo, autocomplete: "photo" %>
+          </div>
+
+          <div class="input-field col s12">
             <%= f.label :email %>
-            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            <%= f.email_field :email, autocomplete: "email" %>
+          </div>
+
+          <div class="input-field col s12">
+            <%= f.label :bio %>
+            <%= f.text_field :bio, autocomplete: "bio" %>
           </div>
 
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
