--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,15 +6,15 @@
     <section class="">
       <div class="card-panel card-profile">
         <span class="bloc1">
-          <img class="circle profile" src="/assets/profile.jpeg">
+          <img class="circle profile" src="<%= current_user.photo %>">
         </span>
         <span class="bloc2">
-          <p><%#= current_user.name %></p>
-          <p><%#= current_user.email %></p>
+          <p>@<%= current_user.username %></p>
+          <p><%= current_user.email %></p>
         </span>
         <div class="bloc1">
           <p class="bold">Projects</p>
-          <p><%#= current_user.projects.count %></p>
+          <p><%= current_user.projects.count %></p>
         </div>
         <div class="bloc2">
           <p class="bold">ShoutOuts</p>
@@ -35,9 +35,9 @@
     <% @projects.each do |project| %> 
       <section class="card-panel">
         <span>
-          <img class="circle avatar-projects" src="/assets/profile.jpeg">
+          <img class="circle avatar-projects" src="/assets/default-avatar.png">
         </span>
-        <span class="username">@<%#= current_user.username %></span>
+        <span class="username">@<%= project.user_id %></span>
         <a class="waves-effect waves-light btn right">brainstor.me</a>
         <div class="card pin">
           <div class="card-image waves-effect waves-block waves-light">
