Add active storage

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -35,9 +35,11 @@
     <% @projects.each do |project| %> 
       <section class="card-panel">
         <span>
-          <img class="circle avatar-projects" src="/assets/default-avatar.png">
+          <img class="circle avatar-small" src="/assets/default-avatar.png">
         </span>
+       
         <span class="username">@<%= project.user_id %></span>
+ 
         <a class="waves-effect waves-light btn right">brainstor.me</a>
         <div class="card pin">
           <div class="card-image waves-effect waves-block waves-light">
