--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -46,7 +46,7 @@
                             <% user = User.find(message.user_id) %>
                             <div>
                             <span class="bloc1">
-                                <img class="circle avatar-projects" src="/assets/profile2.jpeg">
+                                <img class="circle avatar-small" src="/assets/profile2.jpeg">
                             </span>
                             <span class="bloc2">
                                 <p>@<%= user.username %></p>
@@ -79,7 +79,7 @@
                 <% user = User.find(message.user_id) %>
                 <div>
                     <span class="bloc1">
-                        <img class="circle avatar-projects" src="/assets/profile2.jpeg">
+                        <img class="circle avatar-small" src="/assets/profile2.jpeg">
                     </span>
                     <span class="bloc2">
                         <p><%= user.name %></p>
