--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -43,8 +43,30 @@
 <%= f.file_field :images %>
 <% end %>
 
+<h2>Notes</h2>
 
+<%= form_for [@project, @note] do |f| %>
+  <%= f.text_area :body, input_html: { cols: 60, row: 6, placeholder: "What are your thoughts?" } %>
+  <%= f.submit "Submit", class: 'btn' %>
+<% end %>
 
+<section class="answer-list">
+  <% @notes.each do |note| %>
+    <div>
+    <%= note.body %> <br />
+    </div>
+ 
+
+  <% if user_signed_in? %>
+    <small>
+      <%= link_to("Delete", project_note_path(@project, note), class: "btn", data: { id: note.id }, method: :delete) %>
+    </small>
+    •
+  <% end %>
+    <small>
+      Posted <%= time_ago_in_words(note.created_at) %> ago
+    </small>
+ <% end %>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
