Add design to products#show, Add dragrable and dropable notes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,6 +78,11 @@
     height: 40px;
  }
 
+ img.avatar-large {
+    width: 100px;
+    height: 100px;
+ }
+
  img.profile {
     width: 70px;
     height: 70px;
