--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -25,7 +25,7 @@
 
         <div class="input-field col s12">
           <%= form.label :description, for: "description" %>
-          <%= form.text_area :description, id: "froala-editor", class: "validate materialize-textarea" %>
+          <%= form.text_area :description, class: "validate materialize-textarea" %>
         </div>
 
         <div class="input-field col s12">
