Fix the shoutout feature user starting a new shoutout, Fix the owner of projects, notes and messages showing on the views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,3 +93,12 @@
     height: 55px;
     margin: 5px;
  }
+
+ .hidden-message {
+    color: #bbbbbb
+  }
+  
+  .message-widget .active {
+    color: orange;
+  }
+  
