--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -49,7 +49,7 @@
     <% @notes.each do |note| %>
      <div class="note" data-item-id="<%= note.id %>" id="<%= dom_id(note) %>">
         <div id="col s12 m3 context edit">
-          <div class="black card mockup" >
+          <div class="black card note mockup" >
             <div class="control right">
               <a class="btn-floating waves-effect waves-light "><i class="material-icons">invert_colors</i></a>
               <a class="btn-floating waves-effect waves-light btn modal-trigger" href="#colorpalette"><i class="material-icons">palette</i></a>
@@ -61,9 +61,11 @@
               <span contenteditable="true"><%= note.body.html_safe %></span> <br />
             </div>
             <div class="note-user-avatar">
-              <span class="chip">
-                <img src="<%= current_user.photo %>" alt="Contact Person">@<%= current_user.username %>
-              </span>
+              <% if note.user %>
+                <span class="chip">
+                  <img src="<%= current_user.photo %>" alt="Contact Person">@<%= note.user.name %>
+                </span>
+              <% end %>
     
             </div>
           </div>
