--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,16 +45,23 @@
                         <% if message.body %>
                             <% user = User.find(message.user_id) %>
                             <div>
+                            
+                            <% if user.photo.nil? %>
                             <span class="bloc1">
-                                <img class="circle avatar-small" src="/assets/profile2.jpeg">
+                                <img class="circle avatar-small" src="/assets/default-avatar.png">
                             </span>
+                            <% else %>
+                            <span class="bloc1">
+                                <img class="circle avatar-small" src="<%= user.photo %>">
+                            </span>
+                            <% end %>
                             <span class="bloc2">
                                 <p>@<%= user.username %></p>
                                 <p><%= time_ago_in_words(message.created_at) %> ago</p>
                                 <p class="truncate shoutout"> <%= message.body %></p>
                             </span>
                             <small>
-                                <%= link_to("Delete", users_path, class: "", method: :delete, data: { id: message.id}) %>
+                                <%= link_to("Delete", shoutout_create_message_path(message.shoutout, message), class: "", method: :delete, data: { id: message.id}) %>
                             </small>
                             <small>
                                 <%= link_to("Reply", shoutout_create_messages_path(message.id), class: "") %>
