--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -55,7 +55,7 @@
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4 title"><%= project.title %><i class="material-icons right">more_vert</i></span>
             <div class="card-action">
-              <% if user_signed_in? && current_user.id == project.user_id%>
+              <% if user_signed_in? %>
                 <%= link_to project, class: "" do %>
                   <span><i class="material-icons">forward</i></span>
                 <% end %>
